# django-member-manager

./: .gitignore  README.rst  setup.cfg
.github/workflows/: django.yml
member_manager/: __init__.py  apps.py  utils.py
member_manager/admin/: __init__.py  availability.py  availability_inline.py  how_heard.py  page.py  profile.py  profile_skill.py  profile_skill_inline.py  skill.py
member_manager/filters/: published.py
member_manager/forms/: availability.py  availability_inline_formset.py  profile.py
member_manager/models/: __init__.py  availability.py  how_heard.py  page.py  profile.py  profile_skill.py  skill.py
member_manager/tests/: __init__.py  availability.py  availability_form.py  availability_inline_formset.py  availability_test_case.py  page.py  profile.py  profile_add.py  profile_form.py  profile_skill.py  published.py  skill.py  utils.py
member_manager/views/: __init__.py  profile_add.py
