# setup.cfg

[metadata]
name = django-member-manager
version = 0.1
description = A Django app to manage prospect and member information.
long_description = file: README.rst
url = https://github.com/4sfc/django-member-manager
author = J Wokaty
author_email = jwokaty@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.5.3
setup_requires =
    setuptools >= 33.1.1
install_requires =
    Django >= 2.2
